@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

title Domain Model US002

class Agent {
}

class Owner {
}

class Advertisement {
    date
}

abstract class AdvertisementRequest {
}

class RequestType{
    sale
    rent
}

class SaleAdvertisementRequest {
    totalPrice
}

class RentAdvertisementRequest {
    rentPricePerMonth
}

class House {
    existenceBasement
    existenceLoft
    sunExposure
}

abstract class Residence {
    numberBedrooms
    numberBathrooms
    numberParkingSpaces
}

class AvailableEquipment {
    centralHeating
    airConditioning
}

abstract class Property {
    type
    area
    distanceFromCity
    price
    photographs
}

class Photograph {
    URL
}

class PropertyType {
    land
    house
    apartment
}

class Commission {
}

class CommissionType {
    fixedAmount
    percentage
}

abstract class Address {
    zipCode
    streetName
    cityName
    district
}

abstract class Person {
    name
    passportCardNumber
    taxNumber
    emailAddress
    phoneNumber
}

abstract class Employee {
}

Advertisement "*" -- "1" Agent : publishes <
Advertisement "1" -- "1" Commission : needs >
AdvertisementRequest "1" -- "1" Advertisement: becomes >

Agent "1" -- "1" Commission : defines >
CommissionType --|> Commission

Property <|-- Residence
Residence <|-- House
Property "1" -- "1" Owner : has an >
Property <|-- PropertyType
Property "1"-- "1..*" Photograph : needs >
Residence "1" -- "0..*" AvailableEquipment : has >

AdvertisementRequest "*" - "1" Agent: analizes <
AdvertisementRequest "1" - "1" Property: describes >

AdvertisementRequest "1..*" - "1" Owner: submits <

Person "1" - "1" Address : located at  >

Address "1" -- "1 " Property : located at <

Employee --|> Person
Owner --|> Person
Employee <|-- Agent

SaleAdvertisementRequest --|> AdvertisementRequest
RentAdvertisementRequest --|> AdvertisementRequest
RequestType --|> AdvertisementRequest

@enduml